--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -20,7 +20,7 @@
 	title = {{Neutron Scattering with a Triple-Axis Spectrometer: Basic Techniques}},
 	year = {2002},
 	publisher = {Cambridge University Press},
-	isbn = {978-0521411264},
+	isbn = {978-0-521-41126-4},
 }
 
 
@@ -113,7 +113,7 @@
 	author={Kernighan, Brian W and Ritchie, Dennis M},
 	year={1988},
 	publisher={Pearson},
-	isbn={978-0131103627},
+	isbn={978-0-131-10362-7},
 }
 
 
@@ -124,7 +124,7 @@
 	author={Bjarne Stroustrup},
 	year={2013},
 	publisher={Addision-Wesley Professional},
-	isbn={978-0321958327},
+	isbn={978-0-321-95832-7},
 }
 
 
@@ -135,7 +135,7 @@
 	author={Bjarne Stroustrup},
 	year={2018},
 	publisher={Addision-Wesley Professional},
-	isbn={978-0134997834},
+	isbn={978-0-134-99783-4},
 }
 
 
@@ -191,7 +191,7 @@
 	year = {2021},
 	issn = {2352-7110},
 	doi = {10.1016/j.softx.2021.100667},
-	url = "https://www.sciencedirect.com/science/article/pii/S2352711021000121",
+	OPTurl = "https://www.sciencedirect.com/science/article/pii/S2352711021000121",
 	author = {Tobias Weber},
 }
 
@@ -206,7 +206,7 @@
 	year = "2017",
 	issn = "2352-7110",
 	doi = "10.1016/j.softx.2017.06.002",
-	url = "http://www.sciencedirect.com/science/article/pii/S2352711017300183",
+	OPTurl = "http://www.sciencedirect.com/science/article/pii/S2352711017300183",
 	author = {T. Weber},
 }
 
@@ -220,7 +220,7 @@
 	year = "2016",
 	issn = "2352-7110",
 	doi = "10.1016/j.softx.2016.06.002",
-	url = "http://www.sciencedirect.com/science/article/pii/S2352711016300152",
+	OPTurl = "http://www.sciencedirect.com/science/article/pii/S2352711016300152",
 	author = {T. Weber and R. Georgii and P. B\"oni},
 }
 
@@ -237,7 +237,7 @@
 	year  = {2015},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/10448632.2015.1057050},
-	url = {https://doi.org/10.1080/10448632.2015.1057050}
+	OPTurl = {https://doi.org/10.1080/10448632.2015.1057050}
 }
 
 
@@ -250,7 +250,7 @@
 	pages = "01004",
 	year = "2020",
 	doi = "10.1051/epjconf/202022501004",
-	url = "http://doi.org/10.1051/epjconf/202022501004",
+	OPTurl = "http://doi.org/10.1051/epjconf/202022501004",
 	author = {Guanghan Song and Lionel Porcar and Martin B\"ohm and Franck Cecillon and Charles Dewhurst and Yannick Le Goc and J\'erome Locatelli and Paolo Mutti and Tobias Weber},
 }
 
@@ -275,8 +275,8 @@
 	pages = {95-123},
 	year = {2001},
 	issn = {0925-7721},
-	doi = {https://doi.org/10.1016/S0925-7721(01)00003-7},
-	url = {https://www.sciencedirect.com/science/article/pii/S0925772101000037},
+	doi = {10.1016/S0925-7721(01)00003-7},
+	OPTurl = {https://www.sciencedirect.com/science/article/pii/S0925772101000037},
 }
 
 
@@ -304,7 +304,21 @@
 	pages = {153-174},
 	year = {1987},
 	publisher = {Springer},
-	doi = {https://doi.org/10.1007/BF01840357},
+	doi = {10.1007/BF01840357},
+}
+
+
+@article
+{
+	Jeong1998,
+	author = {J. Jeong and K. Kim},
+	title = {{Tool path generation for machining free-form pockets using Voronoi diagrams}},
+	journal = {The International Journal of Advanced Manufacturing Technology},
+	volume = {14},
+	pages = {876-881},
+	year = {1998},
+	publisher = {Springer},
+	doi = {10.1007/BF01179076},
 }
 
 % -----------------------------------------------------------------------------
@@ -321,8 +335,8 @@
 	author = {{Wikipedia contributors}},
 	title = {{Fractional coordinates --- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2020",
-	url = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
-	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
+	url = "https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
 	note = "[Online; accessed 1-February-2021]"
 }
 
@@ -333,8 +347,8 @@
 	author = {{Wikipedia contributors}},
 	title = {{Discovery of nuclear fission --- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2021",
-	url = "\url{https://en.wikipedia.org/w/index.php?title=Discovery_of_nuclear_fission&oldid=999630578}",
-	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Discovery_of_nuclear_fission&oldid=999630578}",
+	url = "https://en.wikipedia.org/w/index.php?title=Discovery_of_nuclear_fission&oldid=999630578",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Discovery_of_nuclear_fission&oldid=999630578}",
 	note = "[Online; accessed 10-February-2021]"
 }
 
@@ -345,8 +359,8 @@
 	author = {{Wikipedia contributors}},
 	title = {{Naturreaktor Oklo --- Wikipedia{,} Die freie Enzyklop\"adie}},
 	year = "2020",
-	url = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
-	howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
+	url = "https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915",
+	OPThowpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
 	note = "[Online; accessed 10-February-2021]"
 }
 
@@ -357,8 +371,8 @@
 	author = {{Wikipedia contributors}},
 	title = {{Einstein notation --- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2021",
-	url = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
-	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
+	url = "https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
 	note = "[Online; accessed 14-April-2021]"
 }
 
@@ -369,8 +383,8 @@
 	author = {{Wikipedia contributors}},
 	title = {{Line–line intersection --- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2021",
-	url = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93line_intersection&oldid=1021815213}",
-	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93line_intersection&oldid=1021815213}",
+	url = "https://en.wikipedia.org/w/index.php?title=Line%E2%80%93line_intersection&oldid=1021815213",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93line_intersection&oldid=1021815213}",
 	note = "[Online; accessed 4-July-2021]"
 }
 
@@ -381,9 +395,21 @@
 	author = {{Wikipedia contributors}},
 	title = {{Line–sphere intersection --- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2021",
-	url = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93sphere_intersection&oldid=1021628678}",
-	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93sphere_intersection&oldid=1021628678}",
+	url = "https://en.wikipedia.org/w/index.php?title=Line%E2%80%93sphere_intersection&oldid=1021628678",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Line%E2%80%93sphere_intersection&oldid=1021628678}",
 	note = "[Online; accessed 4-July-2021]"
+}
+
+
+@misc
+{
+	wiki_milling,
+	author = "{Wikipedia contributors}",
+	title = {{Milling (machining) --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Milling_(machining)&oldid=1030994721",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Milling_(machining)&oldid=1030994721}",
+	note = "[Online; accessed 8-July-2021]"
 }
 
 
@@ -393,8 +419,8 @@
 	author = {{Mozilla Developer Network Web Docs}},
 	title = {{3D collision detection}},
 	year = "2021",
-	url = "\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}",
-	howpublished = "\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}",
+	url = "https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection",
+	OPThowpublished = "\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}",
 	note = "[Online; accessed 4-July-2021]"
 }
 
@@ -405,8 +431,8 @@
 	author = {Abeer George Ghuneim},
 	title = {{Radial Sweep}},
 	year = "2000",
-	url = "\url{http://www.imageprocessingplace.com/downloads_V3/root_downloads/tutorials/contour_tracing_Abeer_George_Ghuneim/ray.html}",
-	howpublished = "\url{http://www.imageprocessingplace.com/downloads_V3/root_downloads/tutorials/contour_tracing_Abeer_George_Ghuneim/ray.html}",
+	url = "http://www.imageprocessingplace.com/downloads_V3/root_downloads/tutorials/contour_tracing_Abeer_George_Ghuneim/ray.html",
+	OPThowpublished = "\url{http://www.imageprocessingplace.com/downloads_V3/root_downloads/tutorials/contour_tracing_Abeer_George_Ghuneim/ray.html}",
 	note = "[Online; accessed 4-July-2021]"
 }
 
@@ -417,8 +443,8 @@
 	author = {{The Royal Swedish Academy of Science}},
 	title = {{The Nobel Prize in Physics 1994 -- Press Release}},
 	year = "1994",
-	url = "\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}",
-	howpublished = "\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}",
+	url = "https://www.nobelprize.org/prizes/physics/1994/press-release/",
+	OPThowpublished = "\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}",
 	note = "[Online; accessed 13-April-2021]"
 }
 
@@ -427,8 +453,8 @@
 {
 	web_mlz,
 	title = {{Heinz-Maier-Leibnitz-Zentrum (MLZ), Garching, Germany}},
-	url = "\url{https://mlz-garching.de}",
-	howpublished = "\url{https://mlz-garching.de}",
+	url = "https://mlz-garching.de",
+	OPThowpublished = "\url{https://mlz-garching.de}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -437,8 +463,8 @@
 {
 	web_nist,
 	title = {{NIST Center for Neutron Research (NCNR), Gaithersburg, Maryland, USA}},
-	url = "\url{https://www.nist.gov/ncnr}",
-	howpublished = "\url{https://www.nist.gov/ncnr}",
+	url = "https://www.nist.gov/ncnr",
+	OPThowpublished = "\url{https://www.nist.gov/ncnr}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -447,8 +473,8 @@
 {
 	web_oakridge,
 	title = {{High-Flux Isotope Reactor (HFIR) at the Oak Ridge National Laboratory (ORNL), Oak Ridge, Tennessee, USA}},
-	url = "\url{https://neutrons.ornl.gov/hfir}",
-	howpublished = "\url{https://neutrons.ornl.gov/hfir}",
+	url = "https://neutrons.ornl.gov/hfir",
+	OPThowpublished = "\url{https://neutrons.ornl.gov/hfir}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -457,8 +483,8 @@
 {
 	web_ill,
 	title = {{Institut Laue-Langevin (ILL), Grenoble, France}},
-	url = "\url{https://www.ill.eu}",
-	howpublished = "\url{https://www.ill.eu}",
+	url = "https://www.ill.eu",
+	OPThowpublished = "\url{https://www.ill.eu}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -468,8 +494,8 @@
 	web_ill_visa,
 	author = {{Institut Laue-Langevin}},
 	title = {{ILL VISA system for remote data analysis}},
-	url = "\url{https://visa.ill.eu}",
-	howpublished = "\url{https://visa.ill.eu}",
+	url = "https://visa.ill.eu",
+	OPThowpublished = "\url{https://visa.ill.eu}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -480,8 +506,8 @@
 	author = {{Institut Laue-Langevin}},
 	year = {2020},
 	title = {{Machine Learning at ILL: First autonomous steps of the neutron spectrometer ThALES}},
-	url = "\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}",
-	howpublished = "\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}",
+	url = "https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales",
+	OPThowpublished = "\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -492,8 +518,8 @@
 	title = {{OpenVoronoi C++ Library (Software)}},
 	author = {Anders E. Wallin},
 	year = {2011-2020},
-	url = "\url{https://github.com/aewallin/openvoronoi}",
-	howpublished = "\url{https://github.com/aewallin/openvoronoi}",
+	url = "https://github.com/aewallin/openvoronoi",
+	OPThowpublished = "\url{https://github.com/aewallin/openvoronoi}",
 	note = "[Online; accessed 7-July-2021]",
 }
 
@@ -504,8 +530,8 @@
 	title = {{QHull C and C++ Library (Software)}},
 	author = {C. B. Barber},
 	year = {1995-2020},
-	url = "\url{http://www.qhull.org/}",
-	howpublished = "\url{http://www.qhull.org/}",
+	url = "http://www.qhull.org/",
+	OPThowpublished = "\url{http://www.qhull.org/}",
 	note = "[Online; accessed 7-July-2021]",
 }
 
@@ -516,8 +542,8 @@
 	title = {{Boost C++ Libraries (Software)}},
 	author = {{Various Authors}},
 	year = {2004-2021},
-	url = "\url{https://www.boost.org/}",
-	howpublished = "\url{https://www.boost.org/}",
+	url = "https://www.boost.org/",
+	OPThowpublished = "\url{https://www.boost.org/}",
 	note = "[Online; accessed 3-July-2021]",
 }
 
@@ -528,8 +554,8 @@
 	title = {{Boost.Polygon, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {{Intel Corporation}},
 	year = {2008-2010},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
+	url = "https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
 	note = "[Online; accessed 5-July-2021]",
 }
 
@@ -540,8 +566,8 @@
 	title = {{Boost.Intrusive, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Olaf Krzikalla and Ion Gaztanaga},
 	year = {2005-2015},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html}",
+	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html}",
 	note = "[Online; accessed 5-July-2021]",
 }
 
@@ -552,8 +578,8 @@
 	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Douglas Gregor and Frank Mori Hess},
 	year = {2001-2009},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html}",
+	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html}",
 	note = "[Online; accessed 3-July-2021]",
 }
 
@@ -564,8 +590,8 @@
 	title = {{Boost.Asio, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Christopher M. Kohlhoff},
 	year = {2003-2021},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
+	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
 	note = "[Online; accessed 3-July-2021]",
 }
 
@@ -576,8 +602,8 @@
 	title = {{Class thread\_pool, part of the Boost.Asio C++ library \cite{web_boost_asio} (Software)}},
 	author = {Christopher M. Kohlhoff},
 	year = {2003-2021},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
+	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio/reference/thread_pool.html}",
 	note = "[Online; accessed 3-July-2021]",
 }
 
@@ -588,8 +614,8 @@
 	title = {{Class avltree, part of the Boost.Intrusive C++ library \cite{web_boost_intrusive} (Software)}},
 	author = {Olaf Krzikalla and Ion Gaztanaga},
 	year = {2005-2015},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
+	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive/avl_set_multiset.html}",
 	note = "[Online; accessed 5-July-2021]",
 }
 
@@ -600,8 +626,8 @@
 	title = {{Voronoi extensions, part of the Boost.Polygon C++ library \cite{web_boost_polygon} (Software)}},
 	author = {Andrii Sydorchuk},
 	year = {2010-2013},
-	url = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
-	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
+	url = "https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
 	note = "[Online; accessed 5-July-2021]",
 }
 
@@ -622,13 +648,13 @@
 	school = {Technische Universität M\"unchen, Physikdepartment E21},
 	address = {Munich, Germany},
 	year = 2017,
-	isbn = {978-3-8439-3114-4},
-	url = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
-	howpublished = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
+	isbn = {978-3-843-93114-4},
+	url = "http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4",
+	OPThowpublished = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
 }
 
 
-@thesis
+@diplomathesis
 {
 	DiplomaWeber,
 	author = "Tobias Weber",
@@ -640,7 +666,7 @@
 }
 
 
-@thesis
+@diplomathesis
 {
 	DiplomaSchumann,
 	author = "Wolfgang Schumann",
@@ -649,5 +675,6 @@
 	school = {FernUniversit\"at Gesamthochschule in Hagen, Fachbereich Informatik, Lehrgebiet Praktische Informatik VI},
 	address = {Hagen, Germany},
 	year = 2002,
+	url = {https://www.fernuni-hagen.de/ks/lehre/abschlussarbeiten/schumann02.shtml},
 }
 % -----------------------------------------------------------------------------
