--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -74,7 +74,8 @@
 \input{tex/errata.tex}
 
 %\section{Bibliography}
-\bibliographystyle{ieeetr}
+%\bibliographystyle{ieeetr}
+\bibliographystyle{libs/thesis_bibstyle.bst}
 \bibliography{tex/\jobname.bib}
 % ====================================================================================================================================
 
