links to online resources

--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -1,5 +1,17 @@
-\chapter{Errata and Online Resources}
-Up-to-date errata for this work, comprising the thesis text and the software, 
-will be published on-line under the DOI \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}.
-Additionally, the main software repository is available here: \url{https://code.ill.fr/scientific-software/takin/paths},
-a mirror of the repository can also be found here: \url{https://github.com/tweber-ill/ill_mirror-takin2-paths}.
+\chapter{Online Resources and Future Errata}
+
+The latest version of the software of this work can be found under the DOI 
+\href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}.
+Additionally, the main software repository is available here: 
+\url{https://code.ill.fr/scientific-software/takin/paths},
+a mirror of the repository can be found here: 
+\url{https://github.com/tweber-ill/ill_mirror-takin2-paths}.
+
+\vspace{0.5cm}
+
+Up-to-date errata for this work will be published on-line under the DOI 
+\href{https://doi.org/10.5281/zenodo.5092159}{10.5281/zenodo.5092159}.
+The source of the thesis text can be found in the repository:
+\url{https://code.ill.fr/tweber/thesis}, and is mirrored in:
+\url{https://github.com/tweber-ill/ill_mirror-thesis}.
+
