--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -183,6 +183,21 @@
 
 @article
 {
+	vTAS2013,
+	author = {M. B\"ohm and A. Filhol and Y. Raoul and J. Kulda and W. Schmidt and K. Schmalzl and E. Farhi},
+	title = {{The vTAS suite: A simulator for classical and multiplexed three-axis neutron spectrometers}},
+	year = {2013},
+	journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+	issn = {0168-9002},
+	volume = {697},
+	pages = {40 -- 44},
+	doi = {10.1016/j.nima.2012.08.050},
+	OPTurl = {https://www.sciencedirect.com/science/article/pii/S0168900212009217},
+}
+
+
+@article
+{
 	Takin2021,
 	title = {{Update 2.0 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)}},
 	journal = {SoftwareX},
