--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -216,6 +216,7 @@ is less than the sum of their radii, $r_1$ and $r_2$, respectively:
 
 
 \subsection{Contour tracing}
+\label{sec:contourtracing}
 Having determined a bitmap representation of allowed and forbidden regions in the angular configuration space,
 we now need to trace the boundary contour between these regions.
 To this end we use the radial sweep algorithm \cite{web_radial_sweep} whose implementation can be found
@@ -249,6 +250,7 @@ The radial sweep algorithm works as given below, following the descriptions in R
 As we are interested in the instrument path that is at the farthest position from walls, we need to calculate
 the Voronoi diagrams for the line segments that constitute these obstacles. In a second step, we group line
 segments into objects in to remove bisecting lines coming from the same object.
+
 
 \subsubsection*{Line segment Voronoi diagrams}
 Voronoi diagrams are described in a general fashion in \cite[Ch. 7, pp. 147f]{Berg2008} and in
@@ -290,8 +292,8 @@ The opposite is true for \textit{OpenVoronoi}: It is available under an open-sou
 deemed it too unstable for use in a production-quality software. The source code for our test can be found in
 the function \lstinline[language=C++]|calc_voro_ovd|, which resided in file \lstinline|./src/libs/hull.h|.
 The source code for the test tool itself is located in: \lstinline|./src/tools/lines.cpp|.
-\textit{VoroLS} is stable and does even handle intersecting lines, but is a \textit{Java} software, not a library, 
-and is not under an open-source license.
+\textit{VoroLS} is stable and does even handle intersecting lines, but is a \textit{Java}
+software, not a library, and is not under an open-source license.
 
 
 \label{sec:voronoi}
@@ -350,6 +352,24 @@ bisector mesh and no bisectors inside forbidden regions exits. This configuratio
 will be used in the software for calculating the bisector path mesh for instrument
 movement.
 
+In the implementation we distinguish between contours and inverted contours, with 
+the former enclosing forbidden regions (and having an open allowed region outside) 
+and the latter enclosing allowed regions (and having an open disallowed region outside).
+This is a purely technical detail as mathematically the two cases are the same
+with just the turning sense of the contour being different. 
+Due to the nature of the contour-tracing algorithm (see section \ref{sec:contourtracing}), 
+the turning sense of the contour is not preserved, and the nature of the contour 
+and its regions have to be determined and stored separately.
+Panel (c) of Fig. \ref{fig:linesegs_grouped_voro} shows the distinction: 
+The contour of region 1 is an inverted one, as it encloses an allowed region,
+whereas regions 2 and 3 are non-inverted, meaning they enclose forbidden regions.
+
+The collection of normal and inverted regions is calculated in the member function
+\lstinline[language=C++]|CalculateLineSegments| of the \lstinline[language=C++]|PathsBuilder|
+class, which resided in file \lstinline|./src/core/PathsBuilder.cpp|. 
+The Voronoi diagram of these regions is calculated in the member function
+\lstinline[language=C++]|PathsBuilder::CalculateVoronoi|.
+
 
 \label{sec:voronoi}
 \begin{figure*}
@@ -376,9 +396,6 @@ movement.
 		\label{fig:linesegs_grouped_voro}}
 \end{figure*}
 
-
-
-\subsection{Simplification of the Voronoi diagram}
 
 
 % -----------------------------------------------------------------------------
