--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-\chapter{Path-finding Strategy}
+\chapter{Path-finding Strategies}
 \label{ch:paths}
 
 This chapter is devoted to the development of the theoretical idea for path-finding in a triple-axis spectrometer (TAS).
