--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -141,6 +141,18 @@
 
 @book
 {
+	Rossum2011,
+	title={{Python Language Reference Manual}},
+	author={Guido van Rossum},
+	editor = {Fred L. Drake, Jr.},
+	year={2011},
+	publisher={Network Theory Ltd.},
+	isbn={978-1-906-96614-0},
+}
+
+
+@book
+{
 	ISOCPP20,
 	title = {{International Standard ISO/IEC 14882 Sixth Edition 2020-12, Programming Languages -- C++}},
 	author = {{International Organization for Standardization (ISO)}},
@@ -644,6 +656,42 @@
 	url = "https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
 	note = "[Online; accessed 5-July-2021]",
+}
+
+
+@misc
+{
+	web_python,
+	title = {{Python (Software)}},
+	author = {{Python Software Foundation}},
+	year = {2001-2021},
+	url = "https://www.python.org/",
+	OPThowpublished = "\url{https://www.python.org/}",
+	note = "[Online; accessed 27-July-2021]",
+}
+
+
+@misc
+{
+	web_NOMAD,
+	title = {{NOMAD Instrument Control System (Software)}},
+	author = {{ILL Instrument Control Group}},
+	year = {2021},
+	url = "https://code.ill.fr/instrument-control",
+	OPThowpublished = "\url{https://code.ill.fr/instrument-control}",
+	note = "[Online; accessed 27-July-2021]",
+}
+
+
+@misc
+{
+	web_NICOS,
+	title = {{NICOS, Networked Instrument Control System (Software)}},
+	author = {Georg Brandl and Enrico Faulhaber and Christian Felder and Jens Kr\"uger and Alexander Lenz and Bj\"orn Pedersen},
+	year = {2010 - 2021},
+	url = "https://nicos-controls.org/",
+	OPThowpublished = "\url{https://nicos-controls.org/}",
+	note = "[Online; accessed 27-July-2021]",
 }
 
 % -----------------------------------------------------------------------------
